--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "console-title": "^1.1.0",
     "debounce": "^1.2.1",
+    "dotenv": "^16.5.0",
     "easymidi": "^3.0.1",
     "osc-js": "^2.4.1"
   }
