--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "~5.8.3"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^25.0.0",
     "console-title": "^1.1.0",
     "debounce": "^1.2.1",
     "dotenv": "^16.5.0",
